--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,116 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-2.59MB/s(Youtube:不良林), server: shcm.pdjc.cc, port: 42000, type: trojan, password: b7dcc148-c8a3-4173-931f-8ecf9413eb58, sni: shcm.pdjc.cc, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-1.82MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇺🇸 美国-2.50MB/s(Youtube:不良林), server: 212.81.47.18, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.86MB/s(Youtube:不良林), server: 120.233.186.71, port: 3381, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-1.53MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-413.1KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 台湾-1.58MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
   - {name: 🇩🇪 德国-3.23MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
   - {name: 🇺🇸 美国-4.04MB/s(Youtube:不良林), server: 212.81.47.17, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-1.41MB/s(Youtube:不良林), server: vjp3.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vjp3.0bad.com}}
   - {name: 🇨🇳 中国-2.89MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇨🇳 台湾-1.58MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
+  - {name: 🇺🇸 美国-2.41MB/s(Youtube:不良林), server: au2-2.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-2.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.81MB/s(Youtube:不良林), server: 212.81.47.15, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇮🇳 印度-2.56MB/s(Youtube:不良林), server: jgwhdlb4.gaox.ml, port: 443, type: trojan, password: 081a4198-d664-4bc5-a7c6-e35982da964b, sni: jgwhdlb4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-366.0KB/s(Youtube:不良林), server: 43.132.153.167, port: 23873, type: vmess, uuid: 143e2134-ca7d-46ff-e902-37d0967b9907, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-306.7KB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.59MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.50MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.86MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-413.1KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.58MB/s(Youtube:不良林)
       - 🇩🇪 德国-3.23MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.04MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.41MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.81MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.56MB/s(Youtube:不良林)
+      - 🇭🇰 香港-366.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-306.7KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-2.59MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.50MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.86MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-413.1KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.58MB/s(Youtube:不良林)
       - 🇩🇪 德国-3.23MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.04MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.41MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.81MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.56MB/s(Youtube:不良林)
+      - 🇭🇰 香港-366.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-306.7KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.59MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.50MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.86MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-413.1KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.58MB/s(Youtube:不良林)
       - 🇩🇪 德国-3.23MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.04MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.41MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.81MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.56MB/s(Youtube:不良林)
+      - 🇭🇰 香港-366.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-306.7KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
       - 🇨🇳 台湾-1.58MB/s(Youtube:不良林)
+      - 🇭🇰 香港-366.0KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-2.59MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.50MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.86MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-413.1KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.58MB/s(Youtube:不良林)
       - 🇩🇪 德国-3.23MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.04MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.41MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.81MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.56MB/s(Youtube:不良林)
+      - 🇭🇰 香港-366.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-306.7KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.59MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.50MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.86MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-413.1KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.58MB/s(Youtube:不良林)
       - 🇩🇪 德国-3.23MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.04MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.41MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.81MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.56MB/s(Youtube:不良林)
+      - 🇭🇰 香港-366.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-306.7KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-2.59MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.50MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.86MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-413.1KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.58MB/s(Youtube:不良林)
       - 🇩🇪 德国-3.23MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.04MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.41MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.81MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.56MB/s(Youtube:不良林)
+      - 🇭🇰 香港-366.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-306.7KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +130,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-2.59MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.50MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.86MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-413.1KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.58MB/s(Youtube:不良林)
       - 🇩🇪 德国-3.23MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.04MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.41MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.81MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.56MB/s(Youtube:不良林)
+      - 🇭🇰 香港-366.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-306.7KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
