--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,116 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-413.1KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 台湾-1.58MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
-  - {name: 🇩🇪 德国-3.23MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.04MB/s(Youtube:不良林), server: 212.81.47.17, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.89MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.41MB/s(Youtube:不良林), server: au2-2.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-2.nigirocloud.com, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.81MB/s(Youtube:不良林), server: 212.81.47.15, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇮🇳 印度-2.56MB/s(Youtube:不良林), server: jgwhdlb4.gaox.ml, port: 443, type: trojan, password: 081a4198-d664-4bc5-a7c6-e35982da964b, sni: jgwhdlb4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-366.0KB/s(Youtube:不良林), server: 43.132.153.167, port: 23873, type: vmess, uuid: 143e2134-ca7d-46ff-e902-37d0967b9907, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-306.7KB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇸🇬 新加坡-1.88MB/s(Youtube:不良林), server: trojan1.udpgw.com, port: 443, type: trojan, password: affae2e0-e84b-11ec-b09f-1239d0255272, sni: trojan1.udpgw.com, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-365.6KB/s(Youtube:不良林), server: vjp3.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vjp3.0bad.com}}
+  - {name: 🇺🇸 美国-2.61MB/s(Youtube:不良林), server: vus3.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vus3.0bad.com}}
+  - {name: 🇨🇳 中国-713.6KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.39MB/s(Youtube:不良林), server: cm-gz.okvpn.xyz, port: 20009, type: trojan, password: 2c100ffe-4f52-4133-8c5c-d053fed7b270, sni: cm-gz.okvpn.xyz, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-2.00MB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
+  - {name: 🇺🇸 美国-2.75MB/s(Youtube:不良林), server: au2-1.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-1.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.80MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 50858, type: trojan, password: f0de3134-aef4-45b5-a135-3a82321bbac6, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-1.48MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.46MB/s(Youtube:不良林), server: fhcarm2.gaox.ml, port: 443, type: trojan, password: f39bd244-f5fe-415c-8b98-a1e5250bf178, sni: fhcarm2.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-413.1KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.58MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.81MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.56MB/s(Youtube:不良林)
-      - 🇭🇰 香港-366.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-306.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.88MB/s(Youtube:不良林)
+      - 🇯🇵 日本-365.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-713.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.39MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.80MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.46MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-413.1KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.58MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.81MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.56MB/s(Youtube:不良林)
-      - 🇭🇰 香港-366.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-306.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.88MB/s(Youtube:不良林)
+      - 🇯🇵 日本-365.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-713.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.39MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.80MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.46MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-413.1KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.58MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.81MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.56MB/s(Youtube:不良林)
-      - 🇭🇰 香港-366.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-306.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.88MB/s(Youtube:不良林)
+      - 🇯🇵 日本-365.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-713.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.39MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.80MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.46MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-1.58MB/s(Youtube:不良林)
-      - 🇭🇰 香港-366.0KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.00MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-413.1KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.58MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.81MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.56MB/s(Youtube:不良林)
-      - 🇭🇰 香港-366.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-306.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.88MB/s(Youtube:不良林)
+      - 🇯🇵 日本-365.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-713.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.39MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.80MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.46MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-413.1KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.58MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.81MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.56MB/s(Youtube:不良林)
-      - 🇭🇰 香港-366.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-306.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.88MB/s(Youtube:不良林)
+      - 🇯🇵 日本-365.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-713.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.39MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.80MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.46MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-413.1KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.58MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.81MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.56MB/s(Youtube:不良林)
-      - 🇭🇰 香港-366.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-306.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.88MB/s(Youtube:不良林)
+      - 🇯🇵 日本-365.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-713.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.39MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.80MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.46MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -130,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-413.1KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.58MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.81MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.56MB/s(Youtube:不良林)
-      - 🇭🇰 香港-366.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-306.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.88MB/s(Youtube:不良林)
+      - 🇯🇵 日本-365.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-713.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.39MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.80MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.46MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
