--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,116 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-1.72MB/s(Youtube:不良林), server: vjp1.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vjp1.0bad.com}}
-  - {name: 🇺🇸 美国-267.5KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-2.33MB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-300.2KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.02MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 48240, type: trojan, password: c8bae3de-16ed-4247-8a99-f38ef79a4b51, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 台湾-766.4KB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
-  - {name: 🇺🇸 美国-2.93MB/s(Youtube:不良林), server: 212.81.47.13, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-468.6KB/s(Youtube:不良林), server: cd.rutracker-cn.com, port: 443, type: trojan, password: ukMzuFSmIXDvgW0h, sni: cd.rutracker-cn.com, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.33MB/s(Youtube:不良林), server: au2-1.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-1.nigirocloud.com, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-240.4KB/s(Youtube:不良林), server: 46.3.240.10, port: 443, type: vmess, uuid: a9f93c36-6b1f-4f68-c067-aa1cff941f97, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: biliroam, ws-headers: {Host: 46.3.240.10}}
+  - {name: 🇨🇳 中国-2.28MB/s(Youtube:不良林), server: 120.241.236.93, port: 34955, type: trojan, password: 7cb64c49-2ce5-4fa6-9b79-9c02eb54735c, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.27MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-332.0KB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇸🇬 新加坡-175.9KB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-778.8KB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 台湾-313.1KB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
+  - {name: 🇨🇳 中国-3.39MB/s(Youtube:不良林), server: 120.241.236.93, port: 51700, type: trojan, password: 7cb64c49-2ce5-4fa6-9b79-9c02eb54735c, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-228.7KB/s(Youtube:不良林), server: shcm.pdjc.cc, port: 42000, type: trojan, password: b7dcc148-c8a3-4173-931f-8ecf9413eb58, sni: shcm.pdjc.cc, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.11MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-266.7KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-267.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-300.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-766.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-468.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
-      - 🇭🇰 香港-240.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-332.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-175.9KB/s(Youtube:不良林)
+      - 🇩🇪 德国-778.8KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-313.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-228.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-266.7KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-1.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-267.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-300.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-766.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-468.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
-      - 🇭🇰 香港-240.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-332.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-175.9KB/s(Youtube:不良林)
+      - 🇩🇪 德国-778.8KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-313.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-228.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-266.7KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-267.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-300.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-766.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-468.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
-      - 🇭🇰 香港-240.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-332.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-175.9KB/s(Youtube:不良林)
+      - 🇩🇪 德国-778.8KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-313.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-228.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-266.7KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-766.4KB/s(Youtube:不良林)
-      - 🇭🇰 香港-240.4KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-313.1KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-1.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-267.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-300.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-766.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-468.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
-      - 🇭🇰 香港-240.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-332.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-175.9KB/s(Youtube:不良林)
+      - 🇩🇪 德国-778.8KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-313.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-228.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-266.7KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-267.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-300.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-766.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-468.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
-      - 🇭🇰 香港-240.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-332.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-175.9KB/s(Youtube:不良林)
+      - 🇩🇪 德国-778.8KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-313.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-228.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-266.7KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-1.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-267.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-300.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-766.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-468.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
-      - 🇭🇰 香港-240.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-332.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-175.9KB/s(Youtube:不良林)
+      - 🇩🇪 德国-778.8KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-313.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-228.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-266.7KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -130,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-1.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-267.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-300.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-766.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-468.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
-      - 🇭🇰 香港-240.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-332.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-175.9KB/s(Youtube:不良林)
+      - 🇩🇪 德国-778.8KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-313.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-228.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-266.7KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
